# singlenum

./: Cargo.toml  README.md
puzzles/cat/extreme/: 01.json  02.json
puzzles/cat/hardest/: puzzle_x_a.json
puzzles/cat/medium/: puzzle_aa.json
puzzles/not_yet/: puzzle_x_b.json
src/: args.rs  enums.rs  lib.rs  main.rs
src/astructs/: abox.rs  column.rs  line.rs  square.rs  table.rs
src/components/: column.rs  line.rs  square.rs
src/components/table/: core.rs  draw.rs
src/utils/: helpers.rs
tests/: test_table_core.rs
