[package]
name = "singlenum"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
camino = "1.1.9"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
clap_complete = "4.5.33"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde_json = "1.0.133"
walkdir = "2.5.0"

[profile.release]
# Binary optimization for release build
# https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
